--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,9 @@ img, svg {
     max-width: 100%;
     vertical-align: middle;
 } 
-
+footer{
+overflow: hidden;
+}
 * {
     box-sizing: border-box;
     margin: 0;
