--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,9 @@ svg {
     max-width: 100%;
     vertical-align: middle;
 }
- 
+h1 ,h2,h3,h4,h5,h6,p{
+    font-family: 'Noto Sans';
+}
 section , header , footer{
     overflow: hidden !important;
 }
@@ -43,56 +45,6 @@ body {
     font-family: 'Nunito Sans';
 }
 
-img[alt="www.000webhost.com"] {
-    display: none;
-}
-
-/* .col-1 {
-    width: 8.33%;
-}
-
-.col-2 {
-    width: 16.66%;
-}
-
-.col-3 {
-    width: 25%;
-}
-
-.col-4 {
-    width: 33.33%;
-}
-
-.col-5 {
-    width: 41.66%;
-}
-
-.col-6 {
-    width: 50%;
-}
-
-.col-7 {
-    width: 58.33%;
-}
-
-.col-8 {
-    width: 66.66%;
-}
-
-.col-9 {
-    width: 75%;
-}
-
-.col-10 {
-    width: 83.33%;
-}
-
-.col-11 {
-    width: 91.66%;
-}
-.col-12 {
-    width: 100%;
-} */
 .navbar{
     position: fixed;
     width: 100%;
@@ -102,11 +54,14 @@ img[alt="www.000webhost.com"] {
     background-color: var(--primary-color);
     z-index: 999999;
 }
-
+.navbar .container-fluid .logo-img img {
+    padding: 7px 10px 7px 0px ;
+}
 .navbar .container .logo-img img {
     height: 44px;
     width: 176px;
     margin-top: 5px;
+    
 }
 
  .nav-item .nav-link {
@@ -123,95 +78,14 @@ img[alt="www.000webhost.com"] {
 .navbar .container .navbar-toggler i:hover {
     color: var(--hover-color);
 }
-
-
-header {
-    background-color: var(--primary-color);
-    opacity: 0.9;
-    padding: 17px 0px;
-    width: 100%;
-}
-
-.header-main a img {
-    height: 44px;
-    width: 176px;
-    margin-top: 5px;
-}
-
-.header-main .col-4 {
-    padding: 0px;
-}
-
-header .col-8 {
-    padding: 0px;
-}
-
-header .col-8 .header-data ul {
-    display: flex;
-    padding: 0px;
-    justify-content: end;
-    margin: 0px;
-}
-
-header .col-8 .header-data ul li {
-    list-style: none;
-    padding: 15px 15px;
-}
-
-header .col-8 .header-data ul li a {
-    font-size: 15px;
-    color: var(--white);
-    text-transform: capitalize;
-    text-align: center;
-    text-decoration: none;
-}
-
-header .col-8 .header-data ul li .active {
-    color: var(--hover-color);
-}
-
-header .col-8 .header-data ul li a:hover {
-    color: var(--hover-color);
-    transition: all 0.5s;
-    position: relative;
-}
-
-header .col-8 .header-data ul li a ::after {
-    position: absolute;
-    content: "";
-    transition: all 0.5s;
-    bottom: 0px;
-    left: 0px;
-    height: 1px;
-    width: 0;
-    background-color: var(--hover-color);
-}
-
-header .col-8 .header-data ul li a :hover::after {
-    width: 99%;
-}
-
-header .col-8 .header-data ul .a-main {
-    text-decoration: none;
-    color: var(--white);
-    background-color: transparent;
-    padding: 12px 25px !important;
-    align-items: center;
-    border: 1px solid var(--white);
-    border-radius: 2px;
-    text-transform: capitalize;
-}
-
-header .col-8 .header-data ul .a-main:hover {
-    background-color: var(--white);
-    color: var(--primary-color);
-    transition: all 0.7s;
-}
-
 .navbar-toggler i {
     color:  #bf9456;
 }
+.container-fluid{
+    padding: 0px;
+    padding: 0px 10px;
 
+}
 /* ========================banner================================== */
 
 .banner {
@@ -227,7 +101,7 @@ header .col-8 .header-data ul .a-main:hover {
 
 .banner .banner-img img {
     max-width: 100%;
-    height: 678px;
+    height: 135vh;
     opacity: 0.6;
 }
 
@@ -238,23 +112,19 @@ header .col-8 .header-data ul .a-main:hover {
     left: 10%;
     height: 300px;
     font-family: 'Noto Sans';
-
 }
-
 .banner .banner-data h2 {
     color: var(--white);
     font-size: 40px;
     margin-bottom: 15px;
     font-weight: 700;
 }
-
 .banner .banner-data p {
     color: var(--font-color);
     font-size: 15px;
     margin-bottom: 40px;
     text-transform: capitalize;
 }
-
 .banner .banner-data .a-main {
     text-decoration: none;
     color: var(--white);
@@ -276,11 +146,11 @@ header .col-8 .header-data ul .a-main:hover {
 .about-main {
     background-color: var(--white);
     opacity: 1;
+    padding: 80px 0px 30px 0px;
 }
 
 .about-main .container {
     max-width: 1200px !important;
-    padding: 80px 0px 30px 0px;
     overflow: hidden;
     padding: 10px;
 }
@@ -358,24 +228,26 @@ header .col-8 .header-data ul .a-main:hover {
     transition: all 0.7s;
 }
 
-
+.services-main{
+    padding: 50px 0px;
+}
 .services-main .container {
     max-width: 1200px !important; 
-    padding: 70px 0px;
     overflow: hidden;
     padding: 10px;
 }
 
-.services-main .container .service-title h2 {
+.services-main .container  h2 {
     text-transform: capitalize;
     font-size: 46px;
     font-weight: 700;
     margin: 0 auto;
     width: 300px;
     text-align: center;
+    /* margin-bottom: 20px; */
 }
 
-.services-main .container .service-title .border-1 {
+.services-main .container .border-1 {
     border: 50px solid var(--hover-color);
     text-align: center;
     width: 60px;
@@ -384,19 +256,9 @@ header .col-8 .header-data ul .a-main:hover {
     justify-content: center;
     margin: 0 auto;
     margin-top: 15px;
+    margin-bottom: 20px ;
     border-radius: 2px;
     position: relative;
-}
-
-.services-main .container p {
-    color: var(--font-color);
-    text-transform: capitalize;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 27px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px 0px;
 }
 .services-main .Book{
     margin: 20px;
@@ -409,8 +271,6 @@ header .col-8 .header-data ul .a-main:hover {
     color: var(--hover-color);
     height: 40px;
     width: 40px;
-    /* justify-content: center;
-    text-align: center; */
     display: flex;
     margin: 0 auto;
 }
@@ -525,8 +385,8 @@ header .col-8 .header-data ul .a-main:hover {
 
 
 .f {
-    padding-top: 50px;
-    padding-bottom: 90px;
+    padding-top: 40px;
+    padding-bottom: 50px;
     background-color: var(--white);
 }
 
@@ -543,7 +403,8 @@ header .col-8 .header-data ul .a-main:hover {
     margin-bottom: 40px;
     transform: scale(1);
     transition: all 1s;
-    color: var(--font-color);
+    font-weight: 700;
+    color: var(--primary-color);
 }
 
 .f h1:hover {
@@ -584,21 +445,22 @@ header .col-8 .header-data ul .a-main:hover {
     font-weight: 700;
     padding-bottom: 15px;
     padding-top: 15px;
-    color: var(--white);
+    color: var(--primary-color);
     text-transform: capitalize;
+    font-family: 'Noto Sans';
 }
 
 .f-box h2:hover {
-    color: var(--primary-color);
+    color: var(--white);
     transition: all 0.5s;
 }
 
 .f-box p {
-    color: var(--font-color);
+    color: var(--white);
 }
 
 .f-box p:hover {
-    color: var(--white);
+    color: var(--primary-color);
     transition: all 0.3s;
 }
 
@@ -1239,8 +1101,8 @@ i {
 }
 
 .contact-main .contact-img img {
-    width: 1525px;
-    height: 638px;
+    width: 100%;
+    height: 115vh;
     opacity: 0.3;
     background-size: cover;
 }
